--- a/.github/workflows/portal-registration-rc-image-update.yml
+++ b/.github/workflows/portal-registration-rc-image-update.yml
@@ -41,14 +41,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Modify image tag in values-rc.yaml
+      - name: Modify image tag in values.yaml
         run: |
-          sed -i 's/${{ env.IMAGE_BEGINN }}.*/${{ env.IMAGE_FULL_NEW }}/' charts/portal/values-rc.yaml
+          sed -i 's/${{ env.IMAGE_BEGINN }}.*/${{ env.IMAGE_FULL_NEW }}/' charts/portal/values.yaml
 
-      - name: Commit and push updated values-rc.yaml
+      - name: Commit and push updated values.yaml
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add charts/portal/values-rc.yaml
+          git add charts/portal/values.yaml
           git commit -m "Add new images for RC portal registration"
           bash ./scripts/push.sh
