--- a/.github/workflows/kics.yml
+++ b/.github/workflows/kics.yml
@@ -21,7 +21,7 @@ name: "KICS"
 
 on:
   push:
-    branches: [main, master]
+    branches: [ main]
   # pull_request:
   # The branches below must be a subset of the branches above
   # branches: [main, master]
@@ -72,4 +72,3 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: kicsResults/results.sarif
-          
