--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -237,7 +237,7 @@ backend:
     name: "administration-service"
     image:
       name: "ghcr.io/catenax-ng/tx-portal-backend_administration-service"
-      administrationservicetag: 69bde8ac6e029d4b7586370e75e505681759bff7
+      administrationservicetag: v1.3.0
     logging:
       businessLogic: "Information"
       sdfactoryLibrary: "Information"
