chore: move scripts into consortia dir

--- a/.github/workflows/portal-image-update.yml
+++ b/.github/workflows/portal-image-update.yml
@@ -51,4 +51,4 @@ jobs:
           git config user.email tractusx-bot@eclipse.org
           git add charts/portal/values.yaml
           git commit -m "Add new image for portal"
-          bash ./scripts/push.sh
+          bash ./consortia/scripts/push.sh
