--- a/.github/workflows/portal-backend-release-image-update.yml
+++ b/.github/workflows/portal-backend-release-image-update.yml
@@ -78,4 +78,4 @@ jobs:
           git config user.email tractusx-bot@eclipse.org
           git add charts/portal/values.yaml
           git commit -m "Add new images for portal backend"
-          bash ./scripts/push.sh
+          bash ./consortia/scripts/push.sh
